--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "real-estate-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
+    "mapbox-gl": "^1.12.0",
+    "rc-slider": "^9.6.1",
     "react": "^17.0.1",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^17.0.1",
+    "react-multi-carousel": "^2.5.5",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spinners-kit": "^1.9.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
